# bachelor-thesis

./: .env.example  .gitignore  CLAUDE.md  README.md  proposal.txt  pyproject.toml  start-dashboard.sh  tmp_orch_prompt.txt
.claude/agents/: nq-signal-coder.md  quant-thinker.md
.github/workflows/: ci.yml
configs/: framework_lock.json  modern_meta.yaml
configs/agents/: llm_orchestrator.yaml
configs/missions/: alpha-discovery.yaml  test-mission.yaml
docs/: AGENT_GUIDE.md  PLATFORM.md  VALIDATION.md
docs/plans/: 2026-03-05-smart-research-loop.md  2026-03-07-learning-scorecard-design.md  2026-03-07-learning-scorecard-implementation.md
research/: __init__.py  feature_catalog.md
research/lib/: atomic_io.py  budget.py  (+26 more)
scripts/: cache_runner.py  launch_autonomy.py  llm_orchestrator.py  promote.py  query_notebook.py  research.py  run_cleanup.py
tests/: conftest.py  test_adaptive_costs.py  test_alpha_decay.py  test_atomic_io.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_validators.py  test_bars.py  test_bars_footprint.py  test_builder.py  test_candidates.py  test_coordination.py  test_dashboard_api.py  test_dashboard_thinker.py  test_data_loader.py  test_edge_probe.py  test_edge_surface.py  test_execution_mode_loader.py  test_experiments_log.py  test_factor_attribution.py  test_feature_groups.py  test_feature_surface.py  test_features_aggressor.py  test_features_book.py  test_features_fabio.py  test_features_footprint.py  test_features_momentum.py  test_features_multi_timeframe.py  test_features_ohlcv_indicators.py  test_features_opening_range.py  test_features_orderflow.py  test_features_pipeline.py  test_features_statistical.py  test_features_toxicity.py  test_features_volume_profile.py  test_framework_lock.py  test_labels.py  test_launch_autonomy.py  test_learning_scorecard.py  test_llm_client.py  (+25 more)
(+70 files in other folders)
