[project]
name = "nq-alpha"
version = "0.1.0"
description = "LLM-driven alpha discovery platform with A/B experiment comparing OHLCV and MBP1 microstructure features on NQ futures"
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.6.0,<5.0.0",
    "notebooklm-py[browser]>=0.3.3",
    "numpy>=2.0.0,<3.0.0",
    "polars>=1.38.1,<2.0.0",
    "portalocker>=3.2.0,<4.0.0",
    "pytest>=9.0.2,<10.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "ruff>=0.15.1,<1.0.0",
    "scikit-learn>=1.8.0,<2.0.0",
    "xgboost>=3.2.0,<4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (integration tests that hit real data)",
]
